header module complete

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
-  <title>Hello World!</title>
+  <title>The Tea Cozy</title>
 </head>
 
 <body>
   <!-- header | navigation -->
-  <header></header>
-
-  <!-- main content -->
-  <div class="content"></div>
-
-  <!-- footer -->
-  <footer></footer>
+  <header class="headerstatic">
+    <div class="headerflexbox">
+      <div class="logoitem"><a href="./index.html"><img src="./resources/images/img-tea-cozy-logo.png" alt="The Tea Cozy Logo" /></a></div>
+      <nav class="navflexbox">
+        <div class="navitem"><a href="#missionstatic">Mission</a></div>
+        <div class="navitem"><a href="#featured">Featured Tea</a></div>
+        <div class="navitem"><a href="#locationstatic">Locations</a></div>
+      </nav>
+    </div>
+  </header>
 
 </body>
 
