footer module complete

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     </div>
   </header>
 
+  <!--footer module -->
+  <footer class="footerstatic">
+    <h2>The Tea Cozy</h2>
+    <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+    <h5>917-555-8904</h5>
+    <h5 class="copy">&copy;2017 The Tea Cozy</h5>
+  </footer>
 </body>
 
 </html>
