main content complete

--- a/index.html
+++ b/index.html
@@ -14,11 +14,74 @@
       <div class="logoitem"><a href="./index.html"><img src="./resources/images/img-tea-cozy-logo.png" alt="The Tea Cozy Logo" /></a></div>
       <nav class="navflexbox">
         <div class="navitem"><a href="#missionstatic">Mission</a></div>
-        <div class="navitem"><a href="#featured">Featured Tea</a></div>
+        <div class="navitem"><a href="#featuredstatic">Featured Tea</a></div>
         <div class="navitem"><a href="#locationstatic">Locations</a></div>
       </nav>
     </div>
   </header>
+
+  <!-- main content container -->
+  <div class="mainflexcontainer">
+
+    <!-- mission module-->
+    <div class="missionstatic">
+      <div class="missionflexbox">
+        <div class="missionitem">
+          <h2>Our Mission</h2>
+        </div>
+        <div class="missionitem">
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- featured tea module -->
+    <div class="featuredstatic">
+      <h2>Tea Of The Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="featuredflexbox">
+        <div class="flexrow">
+          <div class="menuitem"><img src="./resources/images/img-berryblitz.jpg" alt="image of berries floating in tea" />
+            <h4>Fall Berry Blitz Tea</h4></div>
+          <div class="menuitem"><img src="./resources/images/img-spiced-rum.jpg" alt="image of wooden box with printed black lettering, it pays to buy good tea" />
+            <h4>Spiced Rum Tea</h4></div>
+          <div class="menuitem"><img src="./resources/images/img-donut.jpg" alt="image of a powdered donut" />
+            <h4>Seasonal Donuts</h4></div>
+        </div>
+        <div class="flexrow">
+          <div class="menuitem"><img src="./resources/images/img-myrtle-ave.jpg" alt="image of top down view of an a cup of orange tea" />
+            <h4>Myrtle Ave Tea</h4></div>
+          <div class="menuitem"><img src="./resources/images/img-bedford-bizarre.jpg" alt="image of top down view of an open sugar jar next to a cup of tea" />
+            <h4>Bedford Bizarre Tea</h4></div>
+        </div>
+      </div>
+    </div>
+
+    <!--location module-->
+    <div class="locationstatic">
+      <h2>Locations</h2>
+      <div class="addressflexbox">
+        <div class="addressitem">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="addressitem">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="addressitem">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!--footer module -->
   <footer class="footerstatic">
