tweaks to class/id names

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </header>
 
   <!-- main content container -->
-  <div class="mainflexcontainer">
+  <div id="mainflexcontainer">
 
     <!-- mission module-->
-    <div class="missionstatic">
+    <div id="missionstatic">
       <div class="missionflexbox">
         <div class="missionitem">
           <h2>Our Mission</h2>
@@ -36,7 +36,7 @@
     </div>
 
     <!-- featured tea module -->
-    <div class="featuredstatic">
+    <div id="featuredstatic">
       <h2>Tea Of The Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
       <div class="featuredflexbox">
@@ -58,7 +58,7 @@
     </div>
 
     <!--location module-->
-    <div class="locationstatic">
+    <div id="locationstatic">
       <h2>Locations</h2>
       <div class="addressflexbox">
         <div class="addressitem">
